RESOLVED FIXED293193
Fix ODR violation of WebCore::NetworkStorageSession class
https://bugs.webkit.org/show_bug.cgi?id=293193
Summary Fix ODR violation of WebCore::NetworkStorageSession class
David Kilzer (:ddkilzer)
Reported 2025-05-17 15:50:50 PDT
Fix ODR violation of WebCore::NetworkStorageSession class between C++ and Objective-C++ sources: ``` #ifdef __OBJC__ WEBCORE_EXPORT RetainPtr<NSHTTPCookieStorage> nsCookieStorage() const; #endif ```
Attachments
Radar WebKit Bug Importer
Comment 1 2025-05-17 15:55:40 PDT
David Kilzer (:ddkilzer)
Comment 2 2025-05-17 16:10:21 PDT
EWS
Comment 3 2025-05-18 04:14:18 PDT
Committed 295072@main (589b700f5157): <https://commits.webkit.org/295072@main> Reviewed commits have been landed. Closing PR #45559 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.