Fix ODR violation of WebCore::NetworkStorageSession class <https://bugs.webkit.org/show_bug.cgi?id=293193> <rdar://151536875>

Reviewed by Sihui Liu.

* Source/WebCore/platform/network/NetworkStorageSession.h:
(WebCore::NetworkStorageSession::nsCookieStorage):
- Move into PLATFORM(COCOA) section instead of using defined(__OBJC__).
(WebCore::NetworkStorageSession::~NetworkStorageSession):
- Move next to PLATFORM(COCOA) constructors to match other ports.

Canonical link: https://commits.webkit.org/295072@main